# OpenForge

./: 02_your_first_readable_model.ipynb  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: auto-version.yml  ci.yml  publish.yml
OpenForge/ibrahim/test/: test.py
OpenForge/ibrahim/test2/: test.py
ibrahim/: Markov_Chains_Module.py
