[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openforge"
version = "0.20260724.2"
authors = [
  { name="Muhammad Ibrahim", email="muhammad.ibraheem.5002@gmail.com" },
]
description = "A public repository and museum for high-quality, reinvented machine learning modules and core computing algorithms."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "numpy>=1.22.0"
]
dev = [
    "pytest",
    "black"
]

[tool.setuptools.packages.find]
where = ["."]
